--- a/venv312/pyvenv.cfg
+++ b/venv312/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Admin\AppData\Local\Programs\Python\Python312
+home = C:\Users\Admin\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
-version = 3.12.10
-executable = C:\Users\Admin\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Admin\AppData\Local\Programs\Python\Python312\python.exe -m venv D:\Projects\solaris\venv312
+version = 3.13.7
+executable = C:\Users\Admin\AppData\Local\Programs\Python\Python313\python.exe
+command = C:\Users\Admin\AppData\Local\Programs\Python\Python313\python.exe -m venv E:\Github\solaris-main\venv312
