--- a/venv312/pyvenv.cfg
+++ b/venv312/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Admin\AppData\Local\Programs\Python\Python313
+home = C:\Users\Dan\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
 version = 3.13.7
-executable = C:\Users\Admin\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\Admin\AppData\Local\Programs\Python\Python313\python.exe -m venv E:\Github\solaris-main\venv312
+executable = C:\Users\Dan\AppData\Local\Programs\Python\Python313\python.exe
+command = C:\Users\Dan\AppData\Local\Programs\Python\Python313\python.exe -m venv D:\Github\goTech007\solaris\venv312
