--- a/venv312/pyvenv.cfg
+++ b/venv312/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Dan\AppData\Local\Programs\Python\Python313
+home = C:\Users\arthu\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.13.7
-executable = C:\Users\Dan\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\Dan\AppData\Local\Programs\Python\Python313\python.exe -m venv D:\Github\goTech007\solaris\venv312
+version = 3.12.10
+executable = C:\Users\arthu\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\arthu\AppData\Local\Programs\Python\Python312\python.exe -m venv E:\Github\Jude0629\solaris\venv312
