--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ PyOpenGL-accelerate>=3.1.0
 matplotlib>=3.7.0
 reportlab>=4.0.0
 pillow>=10.0.0
+python-docx>=1.1.0
 
 # BIM/IFC support
 ifcopenshell>=0.7.0
