--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ temp/
 .DS_Store
 Thumbs.db
 *.glb
+references/57._SP_52.13330.2016._Svod_pravil._Estestvennoe_i_iskusstvennoe_osveschenie._Aktualizirovannaya_redaktsiya_SN.pdf
+references/gost_r_57795-2017.pdf
+references/SP123685_21_0.pdf
+Ответы на вопросы.docx
