--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ Thumbs.db
 references/gost_r_57795-2017.pdf
 references/57._SP_52.13330.2016._Svod_pravil._Estestvennoe_i_iskusstvennoe_osveschenie._Aktualizirovannaya_redaktsiya_SN.pdf
 references/SP123685_21_0.pdf
+PROJECT_COMPREHENSIVE_SUMMARY.md
+PROJECT_TOTAL_REQUIREMENTS.md
+WHY_SOFTWARE_ENGINEER_CANNOT_COMPLETE.md
